--- a/iss.html
+++ b/iss.html
@@ -48,6 +48,8 @@
         </div>
     </section>
 
+    <footer>Jani Ronkainen 2024</footer>
+
     <script src="script.js" defer></script>
 
 </body>
